# visionArtificial

./: README.md
Proyecto/src/: CMakeLists.txt  VisionArtificial_Proyecto.cxx
Talleres/03_Taller_Transformaciones_geométricas/03_transformaciones/: 04_Transformation_ocv.cxx  04_geometric_transformations_ocv.cxx  CMakeLists.txt
Talleres/05_camera/05_Camera/: .NEW_YEAR.JPG.icloud  05_camera_itk.cxx  05_camera_ocv.cxx  CMakeLists.txt
Talleres/05_camera/05_Camera/muild/: CMakeCache.txt  Makefile  cmake_install.cmake  pr5_camera_ocv
Talleres/06_filtrado/: 06_filtrado.cxx  06_noise_delete.cxx  CMakeLists.txt
Talleres/07_PiramideGaussianayLaplaciana/: 07_pyramid.cxx  CMakeLists.txt
Talleres/07_unbrarizacion/: CMakeLists.txt  Umbrarizacion.cxx
Talleres/08_Morfologia/: 08_Morfologia.cxx  CMakeLists.txt
Talleres/09_Segmentacion/: 08_Segmentacion.cxx  CMakeLists.txt
Talleres/10_Segmentación2/: 10_Segmentacion.cxx  CMakeLists.txt
Talleres/Caracterización/: CMakeLists.txt  textureFeaturesImage.cxx  textureFeaturesWindow.cxx
Talleres/TallerCaracterización/: 12_caracterizacion.cxx  CMakeLists.txt
Talleres/TallerSegmentacionSemillas/: 11_seedSegmentation.cxx  CMakeLists.txt
